learning content structure

--- a/04-jquery/01-Activities/01-JSGenerators/1.html
+++ b/04-jquery/01-Activities/01-JSGenerators/1.html
@@ -9,5 +9,10 @@
     <!-- We created an empty HTML div. Note that there is no content inside. -->
     <div id="empty-div"></div>
 
+    <!--We now create a new javaScript script. -->
+    <script>
+    
+    </script>
+
   </body>
 </html>
