learning content structure

--- a/04-jquery/01-Activities/01-JSGenerators/1.html
+++ b/04-jquery/01-Activities/01-JSGenerators/1.html
@@ -11,7 +11,7 @@
 
     <!--We now create a new javaScript script. -->
     <script>
-    
+    // Inside, we latch onto the "emtyDiv" using the javascript ".getElementById" selector.
     </script>
 
   </body>
