learning contet getElementById

--- a/04-jquery/01-Activities/01-JSGenerators/1.html
+++ b/04-jquery/01-Activities/01-JSGenerators/1.html
@@ -12,9 +12,10 @@
     <!--We now create a new javaScript script. -->
     <script>
     // Inside, we latch onto the "emtyDiv" using the javascript ".getElementById" selector.
-
+    var parentDOM = document.getElementById('empty-div');
 
     //We then use the javaScript method ".textContent" to change the content to "Hello Friends!"
+    
     </script>
 
   </body>
