used JavaScript method .textContent to change the content in div

--- a/04-jquery/01-Activities/01-JSGenerators/1.html
+++ b/04-jquery/01-Activities/01-JSGenerators/1.html
@@ -15,7 +15,7 @@
     var parentDOM = document.getElementById('empty-div');
 
     //We then use the javaScript method ".textContent" to change the content to "Hello Friends!"
-    
+    parentDOM.textContent = "Hello Friends!";
     </script>
 
   </body>
