--- a/04-jquery/01-Activities/01-JSGenerators/4.html
+++ b/04-jquery/01-Activities/01-JSGenerators/4.html
@@ -13,15 +13,18 @@
     <script>
     // Inside, we latch onto the "emtyDiv" using the javascript ".getElementById" selector.
     var targetDiv = document.getElementById('empty-div');
+    var targetDiv1 = document.getElementById('empty-div');
 
     //We then use the javaScript method ".textContent" to change the content to "Hello Friends!"
     targetDiv.textContent = "Hello Friends!";
+
    // In this example, we instead create a new div called "newDiv"
+ newDiv = document.createElement("div");
 
    // We then give this newDiv the text "A pleasure to meet you!".
-
+newDiv.textContent = "A pleaure to meet you!"
    // Now we us the ".appendChid" method to combine the two divs together on the page.
-
+targetDiv.appendChild(newDiv);
     </script>
 
   </body>
