created empty div with id = drink-options

--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -9,6 +9,9 @@
   <h1>Drink Selection!</h1>
   <hr>
 
+  <!-- Here we create a generic div called "drink-options-->
+  <div id = "drink-options"> </div>
+
   <script>
       var drinkList = [
       "Coffee: $5",
