displayed array content at index 0 in the div in html git push git add -A

--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -24,6 +24,11 @@
       "Ice Latte: $6",
       "Ice Tea: $4"
     ];
+
+    // display content of the array in div  with id = drin-options
+    var drinkDiv = document.getElementById("drink-options");
+    drinkDiv.textContent = drinkList[0];
+    
   
   </script>
 
