displayed array content at index 0,1,2 in the div in html

--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -30,6 +30,13 @@
     var newDrinkDiv = document.createElement("p");
     newDrinkDiv.textContent = drinkList[0];
     drinkDiv.appendChild(newDrinkDiv);
+    var newDrinkDiv = document.createElement("p");
+    newDrinkDiv.textContent = drinkList[1];
+    drinkDiv.appendChild(newDrinkDiv);
+    
+    var newDrinkDiv = document.createElement("p");
+    newDrinkDiv.textContent = drinkList[2];
+    drinkDiv.appendChild(newDrinkDiv);
     
 
   
