displayed array content at index 0,1,2,3 in the div in html

--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -37,6 +37,9 @@
     var newDrinkDiv = document.createElement("p");
     newDrinkDiv.textContent = drinkList[2];
     drinkDiv.appendChild(newDrinkDiv);
+    var newDrinkDiv = document.createElement("p");
+    newDrinkDiv.textContent = drinkList[3];
+    drinkDiv.appendChild(newDrinkDiv);
     
 
   
