--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -26,20 +26,26 @@
     ];
 
     // display content of the array in div  with id = drin-options
-    var drinkDiv = document.getElementById("drink-options");
-    var newDrinkDiv = document.createElement("p");
-    newDrinkDiv.textContent = drinkList[0];
-    drinkDiv.appendChild(newDrinkDiv);
-    var newDrinkDiv = document.createElement("p");
-    newDrinkDiv.textContent = drinkList[1];
-    drinkDiv.appendChild(newDrinkDiv);
+    // var drinkDiv = document.getElementById("drink-options");
+    // var newDrinkDiv = document.createElement("p");
+    // newDrinkDiv.textContent = drinkList[0];
+    // drinkDiv.appendChild(newDrinkDiv);
+    // var newDrinkDiv = document.createElement("p");
+    // newDrinkDiv.textContent = drinkList[1];
+    // drinkDiv.appendChild(newDrinkDiv);
     
-    var newDrinkDiv = document.createElement("p");
-    newDrinkDiv.textContent = drinkList[2];
-    drinkDiv.appendChild(newDrinkDiv);
-    var newDrinkDiv = document.createElement("p");
-    newDrinkDiv.textContent = drinkList[3];
-    drinkDiv.appendChild(newDrinkDiv);
+    // var newDrinkDiv = document.createElement("p");
+    // newDrinkDiv.textContent = drinkList[2];
+    // drinkDiv.appendChild(newDrinkDiv);
+    // var newDrinkDiv = document.createElement("p");
+    // newDrinkDiv.textContent = drinkList[3];
+    // drinkDiv.appendChild(newDrinkDiv);
+
+    // This line of Javascript "grabs" the main div on the page ("#drink-options")
+    var drinkDiv = document.getElementById("drink-options");
+
+    // We then use a for loop to iterate through all the drink in drinkList;
+    // For each interation, we perform a series of code operations each time.
     
 
   
