applied for loop and display the elements in the array

--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -46,6 +46,12 @@
 
     // We then use a for loop to iterate through all the drink in drinkList;
     // For each interation, we perform a series of code operations each time.
+    for (i = 0; i < drinkList.length; i++) {
+
+        newDrinkDiv = document.createElement("p");
+        newDrinkDiv.textContent = drinkList[i];
+        drinkDiv.appendChild(newDrinkDiv);
+    }
     
 
   
