--- a/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
+++ b/04-jquery/01-Activities/02-JSDrinkList/drinklist.html
@@ -50,11 +50,12 @@
 
         // For each drink in the array, we create a new paragraph to hold that text.
         // A new paragraph will be created for each iteration of the loop.
-        newDrinkDiv = document.createElement("p");
+        newDrinkP = document.createElement("p");
 
         // We then assign the text of this paragraph to be the text in the array/
-        newDrinkDiv.textContent = drinkList[i];
-        drinkDiv.appendChild(newDrinkDiv);
+        newDrinkP.textContent = drinkList[i];
+        // We then add the paragraph to the main div on the page ("#drink-options")
+        drinkDiv.appendChild(newDrinkP);
     }
     
 
