--- a/04-jquery/01-Activities/03-jQueryGenerators/1.html
+++ b/04-jquery/01-Activities/03-jQueryGenerators/1.html
@@ -20,11 +20,10 @@
 
     // Here we are using jQuery's .HTML method to instantly select and change the contents of our empty-div.
    $("#empty-div").html("<h1>Hello Friends!</h1>"); 
-//    $("#empty-div").html("<h1>Hello friends!</h1>");
 
 
     // We can just as easily append a new line using a similarly simple .append method.
-    $("#emty-div").append("A pleasure to meet you!"); 
+    $("#empty-div").append("<h1>A pleasure to meet you!</h1>");
 
   </script>
 
