--- a/04-jquery/01-Activities/03-jQueryGenerators/1.html
+++ b/04-jquery/01-Activities/03-jQueryGenerators/1.html
@@ -23,7 +23,7 @@
 
 
     // We can just as easily append a new line using a similarly simple .append method.
-    $("#empty-div").append("<h1>A pleasure to meet you!</h1>");
+    $("#empty-div").append("A pleasure to meet you!");
 
   </script>
 
