jQuery create new div and then append to empty-div combined

--- a/04-jquery/01-Activities/03-jQueryGenerators/2.html
+++ b/04-jquery/01-Activities/03-jQueryGenerators/2.html
@@ -25,8 +25,9 @@ var newDiv = $("<div>");
 newDiv.text("A Pleasure to meet you!");
 
 // We can then append it to the other div using the same ".append" method.
-$("#empty-div").append(newDiv);
 
+$("#empty-div").append(newDiv);
+// $("#empty-div").append( $("<div>").text("A Pleasure to meet you!!"));
 
    
 
