class .fancy apply with method attr

--- a/04-jquery/01-Activities/03-jQueryGenerators/3.html
+++ b/04-jquery/01-Activities/03-jQueryGenerators/3.html
@@ -41,6 +41,9 @@
 
         $("#empty-div").append(newDiv);
 
+        // If we need to apply some css, we can quicly do so, using the JQuery ".attr" methos.
+        newDiv.attr("class", "fancy");
+
 
     </script>
 
