jquery drink-list displays in each div

--- a/04-jquery/01-Activities/04-jQueryDrinkList/jquery-drinklist.htm
+++ b/04-jquery/01-Activities/04-jQueryDrinkList/jquery-drinklist.htm
@@ -29,8 +29,9 @@
     ];
 
     for (i = 0; i < drinkList.length; i++) {
-
-        $("#drink-options").append(drinkList[i]);
+        var newDiv = $("<div>");
+        newDiv.text(drinkList[i]);
+        $("#drink-options").append(newDiv);
 
     }
     // Using JavaScript programmatically append each drinkList item to the "drink-options" div
