--- a/04-jquery/01-Activities/05-OnClickBasic/onclick.html
+++ b/04-jquery/01-Activities/05-OnClickBasic/onclick.html
@@ -15,7 +15,12 @@
 
   <script type="text/javascript">
 
-    
+    // This "document.ready" code isn't necessady in this example.. but it is useful to become familiar with.
+    //"document.ready" makes sure that our JavaScript does not get run until the HTML document is finished laoding
+    $(document).ready(function() {
+        $("#click-me").text("Hello World!");
+        
+    });
 
 </script>
 
