alert is created for each click on sandwich type

--- a/04-jquery/01-Activities/06-SandwichClick/sandwich-click.htm
+++ b/04-jquery/01-Activities/06-SandwichClick/sandwich-click.htm
@@ -45,6 +45,9 @@
         
         .on("click", "#grilledcheese", function(){
             alert("Nom nom nom. Gooey Gooey Grilled Cheese!");
+        })
+        .on("click", "#roastbeef", function(){
+            alert("No qualms about animal rights here. I'm all about that roast beef.");
         });
 
       // ...
