varialbes counter created for each sandwich type

--- a/04-jquery/01-Activities/06-SandwichClick/sandwich-click.htm
+++ b/04-jquery/01-Activities/06-SandwichClick/sandwich-click.htm
@@ -30,7 +30,9 @@
       // ====================================================================
       // Here we create variables for tracking the number of sandwiches eaten
       // ...
-
+ var pbjCounter;
+ var grilledcheeseCounter;
+ var roastbeefCounter;
 
       // ...
 
