--- a/04-jquery/01-Activities/06-SandwichClick/sandwich-click.htm
+++ b/04-jquery/01-Activities/06-SandwichClick/sandwich-click.htm
@@ -49,6 +49,9 @@
         
         .on("click", "#grilledcheese", function(){
             alert("Nom nom nom. Gooey Gooey Grilled Cheese!");
+            grilledcheeseCounter++;
+            alert("You've eaten " + grilledcheeseCounter + " grilled cheese sandwiches");
+
         })
         .on("click", "#roastbeef", function(){
             alert("No qualms about animal rights here. I'm all about that roast beef.");
