attached click event to the button

--- a/04-jquery/01-Activities/trigger-random.html
+++ b/04-jquery/01-Activities/trigger-random.html
@@ -36,7 +36,13 @@
 
       // CREATE THE MISSING CODE HERE. Your code should add content to the random-number div.
       // ...
+      $("body").on("click", "#random-button", function(){
+          alert("Clicked");
+        //  $("#random-number").html("Random Number");
+           
+        });
 
+         
 
       // ...
 
