--- a/04-jquery/01-Activities/trigger-random.html
+++ b/04-jquery/01-Activities/trigger-random.html
@@ -32,13 +32,17 @@
 
   <script type="text/javascript">
 
+function randomNumber(min, max) {  
+    return Math.floor(Math.random() * (max - min) + min); 
+}  
+
     $(document).ready(function() {
 
-      // CREATE THE MISSING CODE HERE. Your code should add content to the random-number div.
+      // CREATE THE MISSING CODE HERE. Your code should add content to the random-number div. (between 1 and 1000)
       // ...
       $("body").on("click", "#random-button", function(){
           alert("Clicked");
-        //  $("#random-number").html("Random Number");
+         $("#random-number").html("Random Number" + randomNumber(1, 100)+"s");
            
         });
 
