created randomNumber funtion between 1 and 1000

--- a/04-jquery/01-Activities/trigger-random.html
+++ b/04-jquery/01-Activities/trigger-random.html
@@ -42,7 +42,7 @@ function randomNumber(min, max) {
       // ...
       $("body").on("click", "#random-button", function(){
           alert("Clicked");
-         $("#random-number").html("Random Number" + randomNumber(1, 100)+"s");
+         $("#random-number").html("Random Number between 1 and 1000: " + randomNumber(1, 1000));
            
         });
 
