created lottery generator html

--- a/04-jquery/01-Activities/07-TriggerRandom/trigger-random.html
+++ b/04-jquery/01-Activities/07-TriggerRandom/trigger-random.html
@@ -41,7 +41,7 @@ function randomNumber(min, max) {
       // CREATE THE MISSING CODE HERE. Your code should add content to the random-number div. (between 1 and 1000)
       // ...
       $("body").on("click", "#random-button", function(){
-          alert("Clicked");
+        //   alert("Clicked");
          $("#random-number").html("Random Number between 1 and 1000: " + randomNumber(1, 1000));
            
         });
