result logic works

--- a/04-jquery/01-Activities/09-NumberChecker/number-checker.html
+++ b/04-jquery/01-Activities/09-NumberChecker/number-checker.html
@@ -77,7 +77,7 @@
         $("#computer-pick").text(computerGuess);
 
         // Compare the computer and user guess
-        if (computerGuess === yourPick) {
+        if (computerGuess === parseInt(yourPick)) {
             $("#result").text("Congratulations!! You guessed Correctly.")
         }
         else (
