giving power to captain planet to grow in size

--- a/04-jquery/01-Activities/10-CaptainPlanetGame/captain-planet-game.html
+++ b/04-jquery/01-Activities/10-CaptainPlanetGame/captain-planet-game.html
@@ -112,7 +112,9 @@
     });
 
     // Size Buttons
-   
+   $("#sizeControls").on("click", ".grow-button",function(){
+    captainPlanet.animate({height: "500px"});
+  });
 
     // Visibility Buttons
    
