giving power to captain planet to shrink in size

--- a/04-jquery/01-Activities/10-CaptainPlanetGame/captain-planet-game.html
+++ b/04-jquery/01-Activities/10-CaptainPlanetGame/captain-planet-game.html
@@ -112,8 +112,12 @@
     });
 
     // Size Buttons
-   $("#sizeControls").on("click", ".grow-button",function(){
+   $("#sizeControls").on("click", ".normal-button",function(){
+    captainPlanet.animate({height: "300px"});
+  }).on("click", ".grow-button",function(){
     captainPlanet.animate({height: "500px"});
+  }).on("click", ".shrink-button",function(){
+    captainPlanet.animate({height: "100px"});
   });
 
     // Visibility Buttons
