giving power to captain planet using keyboard

--- a/04-jquery/01-Activities/10-CaptainPlanetGame/captain-planet-game.html
+++ b/04-jquery/01-Activities/10-CaptainPlanetGame/captain-planet-game.html
@@ -154,7 +154,15 @@
         break;
 
         // Move Buttons (Keyboard Up)
-     
+      case 38:
+        captainPlanet.animate({ top: "-=200px" }, "normal");
+        break;
+
+        // Move Buttons (Keyboard Left)
+      case 37:
+        captainPlanet.animate({ left: "-=200px" }, "normal");
+        break;
+
       default:
         break;
       }
