dynamically create buttons

--- a/04-jquery/01-Activities/11-FridgeGame/fridge.html
+++ b/04-jquery/01-Activities/11-FridgeGame/fridge.html
@@ -52,7 +52,7 @@
 <body>
   <div id="display"></div>
   <div id="buttons"></div>
-  <button id="clear">clear</button>
+  <button id="clear">clear!!!!</button>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
@@ -67,7 +67,7 @@
       // =================================================================================
 
       // 1. Create a for-loop to iterate through the letters array.
-
+       
       // Inside the loop...
 
       // 2. Create a variable named "letterBtn" equal to $("<button>");
