dynamically create buttons

--- a/04-jquery/01-Activities/11-FridgeGame/fridge.html
+++ b/04-jquery/01-Activities/11-FridgeGame/fridge.html
@@ -56,29 +56,50 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function () {
 
       // Here we are provided an initial array of letters.
       // Use this array to dynamically create buttons on the screen.
       var letters = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "_"];
+      var main = $("body");
 
+      // We are using another method from jQuery called "find" which scans our DOM tree for what we ask
+      var btns = main.find("#buttons");
 
       // MAJOR TASK #1: DYNAMICALLY CREATE BUTTONS
       // =================================================================================
 
       // 1. Create a for-loop to iterate through the letters array.
-       
-      // Inside the loop...
+      for (i = 0; i < letters.length; i++) {
+        // Inside the loop...
 
-      // 2. Create a variable named "letterBtn" equal to $("<button>");
+        // 2. Create a variable named "letterBtn" equal to $("<button>");
 
-      // 3. Then give each "letterBtn" the following classes: "letter-button" "letter" "letter-button-color".
+        var letterBtn = $("<button>");
 
-      // 4. Then give each "letterBtn" an attribute called "data-letter", with a value eqaual to "letters[i]"
+        // 3. Then give each "letterBtn" the following classes: "letter-button" "letter" "letter-button-color".
+        letterBtn.addClass("letter-button letter letter-button-color");
+        //console.log(letterBtn);
 
-      // 5. Then give each "letterBtn" a text equal to "letters[i]".
+        // 4. Then give each "letterBtn" an attribute called "data-letter", with a value eqaual to "letters[i]"
+        letterBtn.attr("data-letter", letters[i]);
+        // console.log(letterBtn);
 
-      // 6. Finally, append each "letterBtn" to the "#buttons" div (provided).
+        // 5. Then give each "letterBtn" a text equal to "letters[i]".
+        letterBtn.text(letters[i]);
+        console.log(letterBtn);
+
+        // 6. Finally, append each "letterBtn" to the "#buttons" div (provided).
+        btns.append(letterBtn);
+
+
+
+      }
+
+
+
+
+
 
       // Be sure to test that your code works for this major task, before proceeding to the next one!
 
