on click event attached to .letter-button class

--- a/04-jquery/01-Activities/11-FridgeGame/fridge.html
+++ b/04-jquery/01-Activities/11-FridgeGame/fridge.html
@@ -106,7 +106,14 @@
       // MAJOR TASK #2: ATTACH ON-CLICK EVENTS TO "LETTER" BUTTONS
       // =================================================================================
 
-      // 7. Create an "on-click" event attached to the ".letter-button" class.
+      // 7. Create an "on-click" event attached to the ".letter-button" class., 
+
+      btns.on("click", ".letter-button", function() {
+              // Inside the on-click event...
+
+      // 8. Create a variable called "fridgeMagnet" and set the variable equal to a new div.
+
+      })
 
       // Inside the on-click event...
 
