--- a/04-jquery/01-Activities/11-FridgeGame/fridge.html
+++ b/04-jquery/01-Activities/11-FridgeGame/fridge.html
@@ -114,17 +114,20 @@
               // Inside the on-click event...
 
       // 8. Create a variable called "fridgeMagnet" and set the variable equal to a new div.
-      var fridgeMagnet = $("<div>");
+     // var fridgeMagnet = $("<div>");
 
     
 
     
       // 9. Give each "fridgeMagnet" the following classes: "letter fridge-color".
-      fridgeMagnet.addClass("letter fridge-color");
+
+      //fridgeMagnet.addClass("letter fridge-color");
 
       // 10. Then chain the following code onto the "fridgeMagnet" variable: .text($(this).attr("data-letter"))
       //fridgeMagnet.text($(this).attr("data-letter"));
-      fridgeMagnet.text($(this).attr("data-letter"));
+      //fridgeMagnet.text($(this).attr("data-letter"));
+
+      var fridgeMagnet = $('<div class = "letter fridge-color">').text($(this).data('letter'));
 
       // 11. Lastly append the fridgeMagnet variable to the "#display" div (provided);
       $("#display").append(fridgeMagnet);
