After win/lose alert set counter to zero

--- a/04-jquery/01-Activities/12-CrystalExample/12.html
+++ b/04-jquery/01-Activities/12-CrystalExample/12.html
@@ -79,10 +79,12 @@
 
     if (counter === targetNumber) {
       alert("You win!");
+      counter = 0;
     }
 
     else if (counter >= targetNumber) {
       alert("You lose!!");
+      counter = 0;
     }
 
   });
