set the radom word from array colors

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -75,7 +75,8 @@
       function randColor() {
 
         // Set random word
-
+        targetColor = colors[Math.floor(Math.random() * colors.length)];
+        $("#rand-target-color").text(targetColor);
 
         // Set random word color
 
