set the random word color by applying css class

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -80,7 +80,9 @@
 
         // Set random word color
 
-
+        targetColorOfText = colors[Math.floor(Math.random() * colors.length)];
+        $("#rand-target-color").css("color", targetColorOfText);
+      }
       }
 
       // This function creates the actual "game" logic.
