shuffle color array

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -89,6 +89,9 @@
       function createColorPicker() {
 
         // Shuffle color array
+        colors.sort(function() {
+          return 0.5 - Math.random();
+        });
 
 
 
