push text to color array

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -96,7 +96,9 @@
 
 
         // Push to text color array
-
+        for (var i = 0; i < colors.length; i++) {
+          colorsOfText.push(colors[i]);
+        }
 
 
         // Shuffle text color array
