shulle text color array

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -102,7 +102,9 @@
 
 
         // Shuffle text color array
-
+        colorsOfText.sort(function() {
+          return 0.5 - Math.random();
+        });
 
         // Loop through all colors in the array
         // Create element to hold word
