--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -107,9 +107,18 @@
         });
 
         // Loop through all colors in the array
-        // Create element to hold word
-        // Output a word
-        // Make word a random color
+        for (var i = 0; i < colors.length; i++) {
+
+// Create element to hold word
+var holder = document.createElement("li");
+$("#color-picker").append(holder);
+
+// Output a word
+$(holder).attr("id", colors[i]).text(colors[i]);
+
+// Make word a random color
+$(holder).css("color", colorsOfText[i]);
+}
 
       }
 
