clear the div and array upon each round

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -124,6 +124,10 @@ $(holder).css("color", colorsOfText[i]);
 
       // Clear the divs and arrays upon each round.
       function clear() {
+        $("#rand-target-color").empty();
+        $("#color-picker").empty();
+        colorsOfText = [];
+
 
       }
 
