reset the colors

--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -133,6 +133,10 @@ $(holder).css("color", colorsOfText[i]);
 
       // Function for resetting colors and setting new colors.
       function reset() {
+        clear();
+        randColor();
+        createColorPicker();
+
 
       }
 
