--- a/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
+++ b/04-jquery/01-Activities/16-ColorCorrecter/Images/color-correct-unsolved.html
@@ -142,7 +142,17 @@ $(holder).css("color", colorsOfText[i]);
 
       // Get id of element clicked by user
       $("#color-picker").click(function(event) {
+        userAnswer = event.target.id;
 
+        // Compare id to target id
+        if (userAnswer === targetColorOfText) {
+          alert("You win!");
+          reset();
+        }
+        else {
+          alert("Wrong!");
+          reset();
+        }
       });
 
       // Run game
