console log correctly

--- a/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
+++ b/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
@@ -36,7 +36,11 @@
 
 // Create the code necessary to print each of the following lines using the object above:
 // "I found my glasses!"
+console.log("I found my " + theCobWeb.biggestWeb.biggerWeb.items[0] + "!");
+
 // "I found my toothbrush!"
+console.log("I found my " + theCobWeb.biggestWeb.biggerWeb.smallerWeb.item + "!");
+
 // "I found my headphones!"
 // "I found my homework!"
 
