console log correctly I found my headphones

--- a/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
+++ b/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
@@ -42,6 +42,8 @@ console.log("I found my " + theCobWeb.biggestWeb.biggerWeb.items[0] + "!");
 console.log("I found my " + theCobWeb.biggestWeb.biggerWeb.smallerWeb.item + "!");
 
 // "I found my headphones!"
+console.log("I found my " + theCobWeb.biggestWeb.otherBigWeb.item + "!");
+
 // "I found my homework!"
 
 
