console log correctly I found my homework

--- a/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
+++ b/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
@@ -45,6 +45,7 @@ console.log("I found my " + theCobWeb.biggestWeb.biggerWeb.smallerWeb.item + "!"
 console.log("I found my " + theCobWeb.biggestWeb.otherBigWeb.item + "!");
 
 // "I found my homework!"
+console.log("I found my " + theCobWeb.biggestWeb.biggerWeb.smallerWeb.tinyWeb.items[3] + "!");
 
 
 // Bonus (Extra Hard): It's impossible to complete this in the allotted time. Take this home as a challenge and bring it back to your TA/Instructor for the solution.
